# m365-guardian

./: .env.template  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: app.py  bot.py  config.py  confirmations.py  observability.py
backend/functions/: weekly_report.py
backend/services/: audit_service.py  cosmos.py  exo_service.py  graph_service.py  llm_service.py  report_service.py  secret_service.py  session_service.py
backend/tests/: test_app_lifecycle.py  test_audit_service.py  test_config.py  test_confirmations.py  test_cosmos.py  test_executor_confirmation.py  test_exo_service.py  test_graph_helpers.py  test_msal_credential.py  test_observability.py  test_report_service.py  test_secret_service.py  test_session_service.py
backend/tools/: executor.py  validation.py
backend/web-app/templates/: index.html
deployment/: configure-ip-restrictions.ps1
docs/: 01_SYSTEM_PROMPT.md  02_TOOL_SCHEMAS.json  03_DEPLOYMENT_GUIDE.md  04_SAMPLE_CONVERSATIONS.md  05_EXCHANGE_ONLINE_INTEGRATION.md  ARCHITECTURE.md
exo-sidecar/: .funcignore  README.md  host.json  local.settings.json.template  profile.ps1  requirements.psd1
exo-sidecar/ManageExchange/: run.ps1
